# qupiacode

./: .gitignore  README.md  trs.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  railway.toml  voice_agent_worker.py
backend/ai_agent_service/: .env.example  Dockerfile  Dockerfile.dev  package-lock.json  package.json  railway.toml
backend/ai_agent_service/src/: action-executor.test.ts  action-executor.ts  command-queue.test.ts  command-queue.ts  config.ts  context-accumulator.test.ts  context-accumulator.ts  decision-engine.test.ts  decision-engine.ts  index.ts  internal-auth.ts  logger.ts  persona-loader.test.ts  persona-loader.ts  personas.yaml  room-manager.ts  types.ts
backend/ai_agent_service/src/graph/: checkpointer.ts  graph.test.ts  graph.ts  shared-room.ts  state.ts
backend/ai_agent_service/src/llm/: claude-provider.ts  openai-provider.ts  provider-router.ts  types.ts
backend/ai_agent_service/src/persistence/: supabase-room-store.ts
backend/ai_agent_service/src/tools/: canvas-tools.ts
backend/ai_agent_service/src/transcript/: types.ts  webhook-source.ts
backend/canvas_service/: .env.example  main.py  requirements.txt
backend/canvas_service/core/: auth.py  config.py  database.py  redis.py  supabase.py
backend/canvas_service/modules/ai_agent/: router.py
backend/canvas_service/modules/auth/: router.py  schemas.py
backend/canvas_service/modules/boards/: models.py  router.py  schemas.py  service.py
backend/canvas_service/modules/canvas_objects/: models.py  (+3 more)
backend/canvas_service/tests/: conftest.py  test_auth.py  test_boards.py  test_canvas_objects.py  test_collaboration.py  test_config.py  test_image_generation.py  test_liveblocks.py
backend/liveblocks_auth_service/: .env.example  package.json
backend/liveblocks_auth_service/src/: server.js
backend/scripts/: __init__.py  bootstrap_db.py  run_backend_stack.py
backend/supabase/: boards.sql  room_brain.sql
backend/voice_call_service/: .env.example  .gitignore  Makefile  README.md  __init__.py  events.md  pyproject.toml  railway.toml  railway.worker.toml  speechmatics.md  transcription.md  voice_agent_worker.py
backend/voice_call_service/app/: __init__.py  main.py
backend/voice_call_service/scripts/: run_voice_stack.py
backend/voice_call_service/tests/: __init__.py  conftest.py  test_cors.py  test_dev.py  test_health.py  test_voice.py  test_voice_agent.py
(+159 files in other folders)
